--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 
@@ -8,7 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+		<nav>
+		<ul>
+			<li><a href="google.com">Home</a></li>
+			<li><a href="google.com">About</a></li>
+			<li><a href="google.com">Contact us</a></li>
+		</ul>
+	</nav>
+	<h1>3 random videos</h1>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp4">
+	</video>
+		<video controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp4">
+	</video>
+	<video controls>
+	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp4">
+	</video>
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
