--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
 			<li><a href="google.com">Contact us</a></li>
 		</ul>
 	</nav>
-	<h1>3 random videos</h1>
-	<video controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp4">
-	</video>
-		<video controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp4">
-	</video>
-	<video controls>
-	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp4">
-	</video>
+	<h1>3 random audios </h1>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+	</audio>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
+	</audio>
+	<audio controls>
+	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+	</audio>
 		<script type="text/javascript" src="./script.js">
 </script>
 
