--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -8,25 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<nav>
-		<ul>
-			<li><a href="google.com">Home</a></li>
-			<li><a href="google.com">About</a></li>
-			<li><a href="google.com">Contact us</a></li>
-		</ul>
-	</nav>
-	<h1>3 random audios </h1>
-	<audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-	</audio>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
-	</audio>
-	<audio controls>
-	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-	</audio>
-		<script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js">
+		
 </script>
+	<nav>
+        <ul>
+            <li>
+                <a href="www.google.com">Home</a>
+            </li>
+            <li>
+                <a href="www.google.com">About us</a>
+            </li>
+            <li>
+                <a href="www.google.com">Contact us</a>
+            </li>
+        </ul>
+    </nav>
+    <h1>3 random audios</h1>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+    <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+</body>
 
 </body>
 
